--- a/index.html
+++ b/index.html
@@ -81,13 +81,16 @@
     background: linear-gradient(to bottom, #000000 50%, #101010 100%);
     color: white;
         }
-
-    .page-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-        }
+{
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     height: 100vh;
+     background-image: url("IMG_4505.jpg");
+     background-repeat: no-repeat;
+     background-position: top center;
+     background-size: cover;
+}
         
         *{
 	font-family: 'Oswald', sans-serif;
