--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
                 // Send post to API
                 $.ajax({
-                    url: 'https://superphone.io/w/GnlNLE', // Url where to submit the request
+                    url: 'https://superphone.io/w/my-url', // Url where to submit the request
                     type: "POST",
                     beforeSend: function (request) {
                         request.setRequestHeader("Access-Control-Allow-Origin", "*");
@@ -81,12 +81,14 @@
     background: linear-gradient(to bottom, #000000 50%, #101010 100%);
     color: white;
         }
-{
-         display: flex;
+
+    .page-center {
+    display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
-}        
+        }
+        
         *{
 	font-family: 'Oswald', sans-serif;
         }    
@@ -193,7 +195,7 @@
     <div class="page-center">
     <div class="custom-form">
         <div class="container">
-            <h1 class="text-center" style="font-weight: bold">Destiny Fomo</h1>
+            <h1 class="text-center" style="font-weight: bold">YOUR NAME HERE</h1>
             <p class="text-center" style="font-size: 21px">PLEASE ENTER YOUR PHONE NUMBER<br>AND I WILL TEXT YOU RIGHT BACK:</p>
             <form id="addContact" class="form-horizontal" style="min-width: 100%" method="POST" action="#" autocomplete="false" data-parsley-validate>
                 <div class="form-group">
