--- a/index.html
+++ b/index.html
@@ -82,11 +82,15 @@
     color: white;
         }
 
-    .page-center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+   display: flex;
+     align-items: center;
+     justify-content: center;
+     height: 100vh;
+     background-image: url("https://github.com/destinyfomo/Text-Me/blob/1e1cb22685983658475b9640af6f735957e89021/DFIconUpdate.jpg
+");
+     background-repeat: no-repeat;
+     background-position: top center;
+     background-size: cover;
         }
         
         *{
