--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
      align-items: center;
      justify-content: center;
      height: 100vh;
-     background-image: url("https://github.com/destinyfomo/Text-Me/blob/1e1cb22685983658475b9640af6f735957e89021/DFIconUpdate.jpg
-");
+     background-image: url("https://github.com/destinyfomo/Text-Me/blob/main/DFIconUpdate.jpg");
      background-repeat: no-repeat;
      background-position: top center;
      background-size: cover;
