--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      align-items: center;
      justify-content: center;
      height: 100vh;
-     background-image: url("https://github.com/destinyfomo/Text-Me/blob/main/DFIconUpdate.jpg");
+     background-image: url("DFIconUpdate.jpg");
      background-repeat: no-repeat;
      background-position: top center;
      background-size: cover;
