--- a/index.html
+++ b/index.html
@@ -82,15 +82,12 @@
     color: white;
         }
 
-   display: flex;
-     align-items: center;
-     justify-content: center;
-     height: 100vh;
-     background-image: url("DFIconUpdate.jpg");
-     background-repeat: no-repeat;
-     background-position: top center;
-     background-size: cover;
-        }
+   page-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;     
+       }
         
         *{
 	font-family: 'Oswald', sans-serif;
